[project]
name = "comfyui_dit"
description = "Testbed for [a/DiT(Scalable Diffusion Models with Transformers)](https://github.com/facebookresearch/DiT). [w/None of this code is stable, expect breaking changes if for some reason you want to use this.]"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/city96/ComfyUI_DiT"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_DiT"
Icon = ""
